<resources>
    <string name="app_name">My CalculatorGD</string>
    <string name="button_7" translatable="false">7</string>
    <string name="button_8" translatable="false">8</string>
    <string name="button_9" translatable="false">9</string>
    <string name="multiply_button" translatable="false">*</string>
    <string name="button_4" translatable="false">4</string>
    <string name="button_5" translatable="false">5</string>
    <string name="button_6" translatable="false">6</string>
    <string name="button_dev" translatable="false">/</string>
    <string name="button_1" translatable="false">1</string>
    <string name="button_2" translatable="false">2</string>
    <string name="button_3" translatable="false">3</string>
    <string name="plus_button" translatable="false">+</string>
    <string name="button_0" translatable="false">0</string>
    <string name="button_dot" translatable="false">.</string>
    <string name="button_equal" translatable="false">=</string>
    <string name="button_minus" translatable="false">-</string>
    <string name="calculator">Calculator</string>

</resources>