<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:srcCompat="@drawable/phone_view" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/result_display"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:gravity="end|center"
        android:singleLine="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        style="@style/CalcButtonNumbers"
        android:layout_gravity="center|end"
        android:layout_marginTop="@dimen/del_button_layout_marginTop"
        android:layout_marginEnd="@dimen/del_button_layout_marginEnd"
        android:backgroundTint="@color/orange"
        app:icon="@android:drawable/ic_input_delete" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginStart="@dimen/grid_layout_marginStart"
        android:layout_marginEnd="@dimen/grid_layout_marginEnd"
        android:layout_marginBottom="@dimen/grid_layout_marginBottom"
        android:columnCount="4">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/seven_button"
            style="@style/CalcButtonNumbers"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/button_7"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eight_button"
            style="@style/CalcButtonNumbers"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/button_8"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nine_button"
            style="@style/CalcButtonNumbers"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/button_9"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiply_button"
            style="@style/CalcButtonNumbers.NumbOperation"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/multiply_button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/four_button"
            style="@style/CalcButtonNumbers"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/button_4"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/five_button"
            style="@style/CalcButtonNumbers"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/button_5"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/six_button"
            style="@style/CalcButtonNumbers"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/button_6"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dev_button"
            style="@style/CalcButtonNumbers.NumbOperation"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/button_dev"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/one_button"
            style="@style/CalcButtonNumbers"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/button_1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/two_button"
            style="@style/CalcButtonNumbers"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/button_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/three_button"
            style="@style/CalcButtonNumbers"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/button_3"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plus_button"
            style="@style/CalcButtonNumbers.NumbOperation"
            android:layout_row="2"
            android:layout_column="3"
            android:text="@string/plus_button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/zero_button"
            style="@style/CalcButtonNumbers"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/button_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dot_button"
            style="@style/CalcButtonNumbers"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/button_dot"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equal_button"
            style="@style/CalcButtonNumbers"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/button_equal"
            android:backgroundTint="@color/orange"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minus_button"
            style="@style/CalcButtonNumbers.NumbOperation"
            android:layout_row="3"
            android:layout_column="3"
            android:text="@string/button_minus"/>

    </GridLayout>

</FrameLayout>
